# gitingest-ui

./: .gitignore  CMakeLists.txt  LICENSE  PRIVACY_POLICY.md  README.md  build_log.txt  convert_icon.py  digest.txt  install.json  installer.iss  pinokio.js  prepare_package.ps1  start.json  uninstall.json  update.json
PackageRoot/: AppxManifest.xml
src/: AppUI.cpp  AppUI.h  GitingestUI.rc  I18n.cpp  I18n.h  NativeIngester.cpp  NativeIngester.h  SystemUtils.cpp  SystemUtils.h  main.cpp
